# C-Linear-Model-with-Bazel-and-Docker

./: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  README.md
Linear-Model/util/inc/: linear_model.h
appl/: main.cpp
util/: BUILD.bazel
util/src/: linear_model.cpp
util/tst/: linear_model_test.cpp
