module(
    name = "linear_model",
    version = "0.1.0",
)

# Core
bazel_dep(name = "platforms", version = "1.0.0")

# Eigen (linear algebra)
bazel_dep(name = "eigen", version = "3.4.1")

# GoogleTest
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Hermetic C/C++ toolchain (clang-based, via Zig)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
