cc_library(
    name = "linear_model",
    srcs = ["src/linear_model.cpp"],
    hdrs = ["inc/linear_model.h"],
    includes = ["inc"],     # so "linear_model.h" works
    copts = ["-std=c++17"],
    deps = [
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "linear_model_test",
    srcs = ["tst/linear_model_test.cpp"],
    copts = ["-std=c++17"],
    deps = [
        ":linear_model",
        "@googletest//:gtest_main",
    ],
)
